added new urls for photos

--- a/templates/photos.html
+++ b/templates/photos.html
@@ -46,7 +46,7 @@
 		    			<td>
 		    				<a class="fancybox" rel="group" href="#Career">
 						    	<div class="title-img">
-						    		<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/1972407_608903995860129_2014024571_n.jpg?oh=c9aaf920e35297dbd0cbe030e7896671&oe=545BD550&__gda__=1417228931_95ec9f6b762e6151ce903d344a02dfc2" >
+						    		<img src="{{ STATIC_URL }}images/career.jpg" >
 						    	</div>
 					    		<h4>KSEA GBM/Career Night</h4>
 						    </a>						    
@@ -62,7 +62,7 @@
 		    			<td>
 		    				<a class="fancybox" rel="group" href="#SNL">
 						    	<div class="title-img">
-						    		<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/1390719_535952546488608_256787894_n.jpg?oh=e2e97980ac8fedf13434c3b067d95878&oe=545B12F3&__gda__=1416882450_dca330f6acfed00ce4b86ae7380621e9" >
+						    		<img src="{{ STATIC_URL }}images/snl.jpg" >
 						    	</div>		    	
 					    		<h4>Korea Night - SNL</h4>
 						    </a>
@@ -70,7 +70,7 @@
 		    			<td>
 		    				<a class="fancybox" rel="group" href="#BBQ">
 						    	<div class="title-img">
-						    		<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/p417x417/1238923_516209258462937_367274963_n.jpg?oh=b8d27a5f1cc3a69449564e4469ee2182&oe=546CF751&__gda__=1417417149_50a2c11b99e12d9979f873ae58c91e2e" >
+						    		<img src="{{ STATIC_URL }}images/chuseok2013.jpg" >
 						    		<h4>Chuseok Festival BBQ 2013</h4>
 						    	</div>
 						    </a>
@@ -121,128 +121,73 @@
 
 		<div style="display:none">
 			<div id="bbq-2014">
-				<div class="gallery" id="gallery1">
-					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/10690015_702600793157115_655295737938575442_n.jpg?oh=285d50506d12a4c2b52c908dfe0f35d6&oe=54B67534" >
-					<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/10367719_702600659823795_5123770756703830591_n.jpg?oh=71862e266e063f4b80f4f053a889172f&oe=54BA88F7&__gda__=1421301441_49b5f89adc67a54c6f97f9ed99572627" >
-					<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10659354_702600689823792_8569784902967816354_n.jpg?oh=19cf7afe7d71029cdac329aba729caaf&oe=54C84894&__gda__=1422429000_d7ddf8b5f1377f0e930f6f6222cca75b" >
-					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/10600495_702600499823811_1533255587135639552_n.jpg?oh=063ea302a6e73fbb92b53df20081d1f8&oe=54B11555" >
-					<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/10710810_702600766490451_2285851311388634212_n.jpg?oh=19c1ca57fdbabcef0f109fdb3791f43c&oe=54B57524&__gda__=1422547218_ce653f64912a244e01ae9eb5d0ec611c" >
-					<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/10610578_702600953157099_3826086900185501252_n.jpg?oh=5a86c466eb6eb1def62fab901d2d52bb&oe=54B24B4A&__gda__=1422826491_f675c4a4d968edf768d727d16410ce9f" >
-					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10659336_702601009823760_7495035725069942872_n.jpg?oh=f45d5e7b80f7f0f0d4997b9082fca33f&oe=54AC52E1" >
-					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/10460229_702600983157096_1126815804782678287_n.jpg?oh=8e443d7600c7983579d02232f1a7d288&oe=54C91C00" >
-					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xap1/v/l/t1.0-9/10151435_702601123157082_341606661255212381_n.jpg?oh=0a9204195d01578f8667f8c1fafc28ee&oe=54CE0959" >
-					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10612763_702601186490409_7664951439556606219_n.jpg?oh=e8518af79d39d159e066885c043c05f2&oe=54ACCBE7&__gda__=1421204319_808a538c1d84363c9a41eb0fa707e3a2" >
-					<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/1236614_702601209823740_1341146045557072544_n.jpg?oh=c7dea47e2fd1d1a1daf6887e7a11c6e6&oe=54AA771E&__gda__=1421692963_bb6bd9fcf44d2f17cf1a1af9b0384a26" >
-					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xaf1/v/l/t1.0-9/10704099_702601229823738_7484432568788528573_n.jpg?oh=92089e0692df4f23196768915d362252&oe=54AFB6AA" >
-					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10670058_702601296490398_7498694536967512531_n.jpg?oh=44169b9ae1afffd059497c040806d0a9&oe=54AD552E" >
-					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/1545615_702600656490462_3972461157129104190_n.jpg?oh=567c3807045628413bad2eb359c59664&oe=54BA916A" >
+				<div class="gallery" id="gallery8">
+					{% for url in photo_urls.bbq2014 %}
+						<img src="{{url}}" >
+					{% endfor %}
 				</div>
 			</div>
 		</div>
 		<div style="display:none">
 			<div id="bowling-2014">
-				<div class="gallery" id="gallery2">
-					<img src="https://scontent-b-iad.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10385404_698465513570643_8301184195025772577_n.jpg?oh=47ad5f7ea0164f4da899c5c9f189808f&oe=54872F37" >
-					<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10306389_698465516903976_5898471932326019719_n.jpg?oh=f5e5313c62102be54a58a7d89bb1cbd3&oe=54C110A8&__gda__=1417880692_c544d7aab1d3281ba440b49071237bf8" >
-					<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/1969275_698465510237310_6257002879426112090_n.jpg?oh=c3bae6917dd6857330190a7d045a5d91&oe=54C9E982&__gda__=1422176793_2a548f52ea671cad4803e0ad9147d688" >
-					<img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/68955_698465610237300_994381776142988520_n.jpg?oh=38783bcc5580e97275135085a58cd0be&oe=54C29835&__gda__=1422276076_512fdbd8d546de4ff2e84e428a3193d4" >
-					<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10689953_698465656903962_3364452061005008082_n.jpg?oh=712ac885367b0566acd1e0d0fe7e6234&oe=5486044F&__gda__=1422066935_833fea3522f73eb73527e61c9659a62d" >
-					<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/1910184_698465733570621_7037994423616356416_n.jpg?oh=8d21ba8c9613c70c8bed4439b4d20bca&oe=54C8F2C2&__gda__=1421514755_03036ca68ef21eb6fc8c4a6036d76429" >
-					<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10247440_698465793570615_2422381705447557448_n.jpg?oh=97b470d9ba93fac6a9d661022eb34653&oe=54C4E17F&__gda__=1418125219_7ae79450fe49b9bc8fafdc002edd53eb" >
-					<img src="https://scontent-a-iad.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10649620_698465880237273_8449108380150541717_n.jpg?oh=74bb57efb7ea10d78320252f2a31f753&oe=5488D3A1" >
-					<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/1013826_698465950237266_3986836196916516569_n.jpg?oh=1271b09deda4e9b85ab362011bccfc28&oe=548B3CD0&__gda__=1418679789_4222806854d40e270be70b70bf8274f8" >
-					<img src="https://scontent-b-iad.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/1655960_698466290237232_6896173734397448171_n.jpg?oh=4726ccb6de7986bbcc5e2ce90dc9c467&oe=548AD9E2" >
-					<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10645104_698466296903898_479169284666024968_n.jpg?oh=cbf27c1efcb20a622ee07586376d6be9&oe=54BA8F6F&__gda__=1422395942_128bf76e491f9d08982d916bb5c0e267" >
-					<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10622946_698466340237227_7559838430628187975_n.jpg?oh=d531b5fd4941eb95bc8de8edbcc123ea&oe=54C40FE4&__gda__=1418256476_56551eed9d7b866ccf137c00d30356fd" >
+				<div class="gallery" id="gallery7">
+					{% for url in photo_urls.bowling %}
+						<img src="{{url}}" >
+					{% endfor %}
 				</div>
 			</div>
 		</div>
 		<div style="display:none">
 			<div id="chuseok-2014">
-				<div class="gallery" id="gallery3">
-					<img src="https://scontent-b-iad.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/997061_693988170685044_8324053042147533838_n.jpg?oh=988bfe4840fa397a42e0a3ab9c2465dd&oe=54C652B3">
-					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/10383483_693988174018377_7276721224336100936_n.jpg?oh=ea4cddd3fe238724fbf3e48cd0f520fd&oe=548702B7&__gda__=1422963841_d745b707ff0888110129e5eaf8dd0aa8">
-					<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/10557343_693988264018368_4686172903175575509_n.jpg?oh=1c6ff741d516e9977825614a7dee23a3&oe=5482BD23&__gda__=1418683282_720f4838e3a8bdfb488393e78f511a52" >
-					<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10482528_693988240685037_9111307341489072343_n.jpg?oh=59fad622e18170b00d649194c135551e&oe=54CB1ACC&__gda__=1418159220_36a65e26c0fd9d3bff1e26ed7c75249f">
-					<img src="https://scontent-b-iad.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/10590666_693988300685031_1784199683192958169_n.jpg?oh=57e5d040553a7d2205902f6db6686f53&oe=54D0EBB4">
-					<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10641303_693988387351689_732420647895837032_n.jpg?oh=d8904726d8305c07917b140bd2564883&oe=54C0F670&__gda__=1422078777_6b16448170c63be02b45bcd0a716ed98">
-					<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/10703903_693988390685022_8175764281850002923_n.jpg?oh=b87cd6455b2317136eb1fd5c10352682&oe=54BF9E17&__gda__=1418093734_d73b76603bf99af69c34df02f1609255">
-					<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10660285_693988420685019_2728809651950719772_n.jpg?oh=90dc9d90c804d05dabc1a834072e12b8&oe=54C166D8&__gda__=1418688352_aba81a086bf72a8eda4cadbb66904cc5">
-					<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/10557298_693988454018349_613313932007748380_n.jpg?oh=6959b9de2f03ac8f96aeb84a16d8b713&oe=5485E4C1&__gda__=1422920794_2a3e0c73683832bcb178294fcc622ccd">
-					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10636206_693988497351678_6084928343307406472_n.jpg?oh=d86485f6eadff26ba831fec421b8cdfe&oe=54BFBED3&__gda__=1418554895_d8d3de7ee3cc6f551fd957bbe893fb22">
-					<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10689861_693988614018333_1667542155041911270_n.jpg?oh=aae9790c5c591b4737030d04f4cc85bd&oe=54BE4B0E&__gda__=1421429970_63f4593dda3d86c01ada773ae1c29bac">
-					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10702164_693988620684999_1846759151227454475_n.jpg?oh=2a6433b77b218695bc8e792b63b50e43&oe=548AB223&__gda__=1421710335_737eb16f78a89e0b39948c3909134c90">
-					<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10647090_693988167351711_8517423347774021816_n.jpg?oh=8a0f297573f7717dc95f0005f645d83e&oe=54855C3A&__gda__=1421616770_7963330c24c3ad101174c3efc624af23">
+				<div class="gallery" id="gallery6">
+					{% for url in photo_urls.chuseok2014 %}
+						<img src="{{url}}" >
+					{% endfor %}
 				</div>
 			</div>
 		</div>
 		<div style="display:none">
 			<div id="kickoff-2014">
-				<div class="gallery" id="gallery4">
-					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10645330_10153156614114488_1695784841970772361_n.jpg?oh=8229ba2490ee2ec332d8680a4be4b127&oe=548A0CA3&__gda__=1422536373_6ba5401dc060595ba4bab408985df43f">
-					<img src="{{ STATIC_URL }}images/kickoff_2.jpg">
-					<img src="{{ STATIC_URL }}images/kickoff_3.jpg">
+				<div class="gallery" id="gallery5">
+					{% for url in photo_urls.kickoff2014 %}
+						<img src="{{url}}" >
+					{% endfor %}
 				</div>
 			</div>
 		</div>
 		<div style="display:none">
 			<div id="Career">
-				<div class="gallery" id="gallery5">
-					<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xap1/t1.0-9/1509830_608903779193484_723407919_n.jpg">
-					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpf1/t1.0-9/10150614_608903772526818_1728878078_n.jpg">
-					<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/10150658_608903929193469_311390140_n.jpg?oh=726ac99d4363e378b006b11068446db0&oe=54669928&__gda__=1416154503_abe29ca8a718e33d5dc658384fe5ddda">
-					<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/1972407_608903995860129_2014024571_n.jpg?oh=c9aaf920e35297dbd0cbe030e7896671&oe=545BD550&__gda__=1417228931_95ec9f6b762e6151ce903d344a02dfc2">
-					<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpf1/t1.0-9/10172605_608903972526798_479142446_n.jpg">
-					<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xap1/t1.0-9/1601491_608904082526787_542432868_n.jpg">
-					<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn2/t1.0-9/1394796_608904139193448_1908817613_n.jpg">
-					<img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/10154443_608904015860127_1487697228_n.jpg?oh=62c3719cf8d99a418e47a3a283ef85d4&oe=546291ED&__gda__=1417733602_6db059e8e5d2830faadbb804ac646295">
-					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10003880_608904152526780_1013414800_n.jpg?oh=619a274a20ae3e5fb9f77a1648b143b2&oe=54693CE7">
+				<div class="gallery" id="gallery4">
+					{% for url in photo_urls.career %}
+						<img src="{{url}}" >
+					{% endfor %}
 				</div>
 			</div>
 		</div>
 		<div style="display:none">
 			<div id="horse">
-				<div class="gallery" id="gallery6">
-					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-xpf1/t1.0-9/1800339_588263244590871_1471171126_n.jpg">
-					<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpf1/t1.0-9/1911788_588263271257535_1532979236_n.jpg">
-					<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpa1/t1.0-9/1798194_588263157924213_1617561193_n.jpg">
-					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xpa1/t1.0-9/1796519_588263321257530_1497374952_n.jpg">
-					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xap1/t1.0-9/1660628_588263524590843_1309847779_n.jpg">
-					<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpf1/t1.0-9/1958485_588263527924176_548198389_n.jpg">
-					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xaf1/t1.0-9/1780896_588263737924155_17721672_n.jpg">
+				<div class="gallery" id="gallery3">
+					{% for url in photo_urls.horse %}
+						<img src="{{url}}" >
+					{% endfor %}
 				</div>
 			</div>
 		</div>
 		<div style="display:none">
 			<div id="SNL"> 
-				<div class="gallery" id="gallery7">				
-					<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/1456695_542649682485561_1759024476_n.jpg?oh=d90ae768abd4fd2ed2ff782225640887&oe=546B11EA&__gda__=1416513349_7bbad8df324d92543704e9105771b1ed">
-					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-xfp1/t1.0-9/1468794_542649599152236_648908827_n.jpg">
-					<img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-xap1/t1.0-9/1470315_542649772485552_1378419564_n.jpg">
-					<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/t1.0-9/1471883_542650079152188_1531925360_n.jpg">
-					<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/734171_542650715818791_651123690_n.jpg?oh=353ea8868b0300b4480eea01b75f9cb0&oe=5481B54A&__gda__=1417409523_3f8cf461f76793e421f30315c1f4cd27">
-					<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/1396055_542651589152037_245931603_n.jpg">
-					<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/545985_542651722485357_1773303613_n.jpg">
-					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-prn2/t1.0-9/1425648_542651909152005_1905098223_n.jpg">
-					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-xpf1/t1.0-9/1466157_542652165818646_500562654_n.jpg">
-					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xap1/t1.0-9/1463964_542653075818555_107361965_n.jpg">
-					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/539720_542653535818509_1645138556_n.jpg?oh=4cb0dd6fb167567a47c1ede7cd9afb98&oe=5460817D">
-					<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-prn2/t1.0-9/558619_542653975818465_315431770_n.jpg">
-					<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-prn2/t1.0-9/1460082_542654559151740_696946073_n.jpg">
-					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1461204_542654769151719_613210277_n.jpg?oh=307cc8cf20eeb0f8105311fe6f633e4b&oe=54626C2F">
+				<div class="gallery" id="gallery2">				
+					{% for url in photo_urls.snl %}
+						<img src="{{url}}" >
+					{% endfor %}
 				</div>
 			</div>
 		</div>
 		<div style="display:none">
 			<div id="BBQ">
-				<div class="gallery" id="gallery8">
-					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xap1/t1.0-9/1239661_516208171796379_850692583_n.jpg">
-					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-frc3/t1.0-9/1233493_516208175129712_1593840193_n.jpg">
-					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xpa1/t1.0-9/563585_516208168463046_1545374843_n.jpg">
-					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-frc3/v/t1.0-9/p417x417/734386_516208268463036_443641389_n.jpg?oh=99c0d00289f6be39daf4b8d63d33efb5&oe=546BF19F">
-					<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/p417x417/1238923_516209258462937_367274963_n.jpg?oh=b8d27a5f1cc3a69449564e4469ee2182&oe=546CF751&__gda__=1417417149_50a2c11b99e12d9979f873ae58c91e2e">
-					<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-frc3/v/t1.0-9/p417x417/1236318_516209311796265_1024590172_n.jpg?oh=abed357634a9e331d3e00eca3cc54b8d&oe=547D2908&__gda__=1416507160_092062362e30bafa96b86ad0dafe4822">
-					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/p417x417/579058_516209361796260_1135421937_n.jpg">
+				<div class="gallery" id="gallery1">
+					{% for url in photo_urls.chuseok2013 %}
+						<img src="{{url}}" >
+					{% endfor %}
 				</div>
 			</div>
 		</div>
