--- a/KUSAapp/static/css/style.css
+++ b/KUSAapp/static/css/style.css
@@ -383,7 +383,7 @@ p {
 }
 
 #photos {
-	height: 630px;
+	height: 670px;
 	margin: 0 auto;	
 }
 #photos .section-title {
@@ -420,6 +420,10 @@ p {
 	height:175px;
 	border: 5px solid #C5C5C5;
 }
+#photos .pagination {
+	margin-top:-10px;	
+}
+
 .gallery { 
 	width: 920px;
 	height: 550px;
