added Korea Night Ad; added photos for save my seoul and lunar new year

--- a/templates/english.html
+++ b/templates/english.html
@@ -5,7 +5,12 @@
 	<!-- <div class="narrower-container"> -->
 		<div id="carousel-and-nav">
 			<!-- <a class="jcarousel-prev" href="#"><img class="arrow" src="{{ STATIC_URL }}images/left_arrow.png"></a> -->
-		    <div class="jcarousel">
+
+			<!-- Ad for upcoming Korea Night -->
+			<img src="{{ STATIC_URL }}images/KoreaNightBanner.png">
+			<p style="padding-left:20%; width:1050px;">Duke KUSA proudly presents KOREA NIGHT! Join us for our annual cultural showcase featuring a night filled with various student performing groups demonstrating Korean culture. From drums to dance to many vocal musical acts, there's sure to be many amazing performances for everyone! There will also be a free dinner beforehand, consisting of 불고기 (bulgogi marinated beef), 잡채 (stir-fried noodles/veggies), and 전 (Korean pancake). No tickets required for entry, so just show up and bring lots of friends! Visit our <a href="https://www.facebook.com/events/803751349696899">Facebook event page</a> for more details and information!</p>
+
+		    <!-- <div class="jcarousel">
 		    	<ul>
 			        <li>
 			        	<img src="{{ STATIC_URL }}images/photo1_new.jpg">
@@ -35,7 +40,7 @@
 			        	</div>
 			        </li>
 		        </ul>
-		    </div>
+		    </div> -->
 		    <!-- <a class="jcarousel-next" href="#"><img class="arrow" src="{{ STATIC_URL }}images/right_arrow.png"></a> -->
 	    <!-- </div> -->
 	    <!-- <br style="clear: left;" /> -->
