changed title in the header

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Duke KUSA: Korean Undergraduate Student Association</title>
+		<title>Duke KUSA: Duke Korean Undergraduate Student Association</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />                
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.fancybox.css" />
