updated events section

--- a/templates/events.html
+++ b/templates/events.html
@@ -9,6 +9,62 @@
 				<table class="events-table" id="event-page-1">
 					<tr>
 						<td class="event-image">
+							<img src="{{ STATIC_URL }}images/events/career.jpg" >
+		    			</td>
+		    			<td class="event-desc">
+		    				<h2><strong>Career Workshop</strong></h2>
+		    				<h4>April 11, 2015, 11 AM at Keohane Atrium</h4>
+		    				<p>
+		    					Interested in pursuing graduate, medical, law, or pharmacy school? Want FREE Korean food catered from Mixed AND raffle tickets? Then come to KSEA & KUSA's Career Workshop on April 11th! Meet and network with professionals and upperclassmen for career advice!<br><br>
+								Check out our <a href="https://www.facebook.com/events/437941396364284/"> Facebook event page</a> to view the full schedule and the panel members!
+		    				</p>
+		    			</td>
+					</tr>
+		    		<tr>
+		    			<td class="event-image">
+							<img src="{{ STATIC_URL }}images/events/KoreaNightPoster.jpg" >
+		    			</td>
+		    			<td class="event-desc">
+		    				<h2><strong>Korea Night 2015</strong></h2>
+		    				<h4>March 21, 2014, 7:00PM at Reynolds Theater</h4>
+		    				<p>
+		    					Duke KUSA proudly presents KOREA NIGHT! Join us for our annual cultural showcase featuring a night filled with various student performing groups demonstrating Korean culture. From drums to dance to many vocal musical acts, there's sure to be many amazing performances for everyone! There will also be a free dinner beforehand, consisting of bulgogi, stir-fried noodles, and Korean pancakes. Visit our <a href="https://www.facebook.com/events/803751349696899">Facebook event page</a> for more details and information!
+		    				</p>
+		    			</td>
+		    		</tr>
+		    	</table>
+				<table class="events-table" id="event-page-2" style="display:none">
+					<tr>
+						<td class="event-image">
+							<img src="{{ STATIC_URL }}images/events/KoreanLunar.jpg" >
+		    			</td>
+		    			<td class="event-desc">
+		    				<h2><strong>Korean Lunar New Year Celebration</strong></h2>
+		    				<h4>February 14, 2014, 12:30 PM at Keohane Atrium</h4>
+		    				<p>
+		    					Come join KUSA as we celebrate the Korean Lunar New Year (설날)! Per tradition, we will be serving hot rice cake soup (떡국) to those seeking a little warmth from these chilly days. Of course, food isn't always enough...so we'll be playing some team games where you'll get the chance to win some prizes (Hint: may be useful for Valentine's Day)! So come out of your burrows (or tents) to mingle and catch up with others!
+		    				</p>
+		    			</td>
+					</tr>
+		    		<tr>
+		    			<td class="event-image">
+							<img src="{{ STATIC_URL }}images/events/karaoke.jpg" >
+		    			</td>
+		    			<td class="event-desc">
+		    				<h2><strong>Duke KUSA + ASA: Karaoke Night</strong></h2>
+		    				<h4>November 1, 2014, 4:30PM at Keohane Atrium</h4>
+		    				<p>
+		    					Come join KUSA and ASA for a FREE night of karaoke! <br>
+		    					**MEET AT WEST BUS STOP @8:30**<br>
+		    					Please sign up at the link below to reserve a spot:<br> <a href="http://goo.gl/forms/XQTqQM1KRP"> http://goo.gl/forms/XQTqQM1KRP </a><br><br>
+		    					Rides will be provided. Please invite your friends!
+		    				</p>
+		    			</td>
+		    		</tr>
+		    	</table>
+				<table class="events-table" id="event-page-3" style="display:none">
+					<tr>
+						<td class="event-image">
 							<img src="{{ STATIC_URL }}images/events/jubilee.jpg" >
 		    			</td>
 		    			<td class="event-desc">
@@ -35,7 +91,7 @@
 		    			</td>
 		    		</tr>
 		    	</table>
-				<table class="events-table" id="event-page-2" style="display:none">
+				<table class="events-table" id="event-page-4" style="display:none">
 					<tr>
 						<td class="event-image">
 							<img src="{{ STATIC_URL }}images/events/bbq.jpg" >
@@ -67,7 +123,7 @@
 		    			</td>
 		    		</tr>
 		    	</table>
-		    	<table class="events-table" id="event-page-3" style="display:none">
+		    	<table class="events-table" id="event-page-5" style="display:none">
 		    		<tr>
 		    			<td class="event-image">
 							<img src="{{ STATIC_URL }}images/events/chuseok.jpg" >
@@ -105,6 +161,8 @@
 				  	<li class="active" id="event-page-1"> 	 	<a href="#">1 </a>		</li>
 				  	<li id="event-page-2">					 	<a href="#">2 </a>		</li>
 				  	<li id="event-page-3">					 	<a href="#">3 </a>		</li>
+				  	<li id="event-page-4">					 	<a href="#">4 </a>		</li>
+				  	<li id="event-page-5">					 	<a href="#">5 </a>		</li>
 					<!-- <li id="next-photo-page">					<a href="#">&raquo;</a> </li> -->
 				</ul>
 			</div>
