added google analytics

--- a/templates/events.html
+++ b/templates/events.html
@@ -52,7 +52,7 @@
 		    			</td>
 		    			<td class="event-desc">
 		    				<h2><strong>Duke KUSA + ASA: Karaoke Night</strong></h2>
-		    				<h4>November 1, 2014, 4:30PM at Keohane Atrium</h4>
+		    				<h4>January 23, 2015, 9:00PM at Star Karaoke</h4>
 		    				<p>
 		    					Come join KUSA and ASA for a FREE night of karaoke! <br>
 		    					**MEET AT WEST BUS STOP @8:30**<br>
