--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Duke KUSA: Duke Korean Undergraduate Student Association</title>
+		<title>Vanderbilt KUSA: Vanderbilt University Korean Undergraduate Student Association</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />                
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.fancybox.css" />
@@ -26,9 +26,9 @@
 		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
 		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture.">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-		<meta property="og:url" content="http://www.dukekusa.com"/> 
-		<meta property="og:title" content="Duke KUSA"/>
-		<meta property="og:description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture."/> 
+		<meta property="og:url" content="http://www.vanderbiltkusa.com"/> 
+		<meta property="og:title" content="Vanderbilt KUSA"/>
+		<meta property="og:description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Vanderbilt University who share a common interest in Korean culture."/> 
 		<meta property="og:image" content="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/269344_407788769304987_1034310108_n.jpg?oh=bc0153f689b5e37d0bc92fb53c679ef7&oe=5461ED7E&__gda__=1416801199_5d173725c2f92c3bb524a8b5bb41ccfa"/> 
 	</head>
 
@@ -39,14 +39,14 @@
 				<!--top bar with description and email-->
 				<div id="topbar">
 					<div class="narrower-container">
-						<div id="desc"><p>Duke Korean Undergraduate Student Organization</p></div>
-						<div id="email"><p>kusa.dukeu@gmail.com</p></div>
+						<div id="desc"><p>Vanderbilt Korean Undergraduate Student Organization</p></div>
+						<div id="email"><p>kusa.vandy@gmail.com</p></div>
 					</div>
 				</div>				
 				<!--space for kusa logo-->
 				<div id="logo">
 					<div class="narrower-container"> 
-						<img src="{{ STATIC_URL }}images/KUSA_logo.jpg" alt="kusa logo">
+						<img src="{{ STATIC_URL }}images/KUSA_logo.jpg" >
 					</div>
 				</div>
 				<!--nav bar for different pages-->
@@ -75,7 +75,7 @@
 			<div id="footer">
 				<div class="narrower-container">
 					<div id="footer-desc">
-						Copyright &copy 2015 Duke Korean Undergraduate Student Association. All Rights Reserved. <br><br>
+						Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. All Rights Reserved. <br><br>
 						<!-- <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. -->
 					</div>
 					<div id="toTop">
