--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 		<div id="index_container">
 			<div id="logo-homepage">
 				<h1>KUSA</h1>
-				<h3>Duke Korean Undergraduate Student Association</h3>
+				<h3>Vanderbilt Korean Undergraduate Student Association</h3>
 			</div>
 			<div id="choose_lang">
 				<a href="eng"><div id="lang-eng">English</div></a>
