--- a/templates/base.html
+++ b/templates/base.html
@@ -53,11 +53,11 @@
 				<div id="navbar"> 
 					<div class="narrower-container">
 						<ul id="nav-list">
-							<li><a href="#about">About Us</a></li>
-							<li><a href="#exec">E-Board</a></li>
+							<li><a href="#about">KUSA</a></li>
+							<li><a href="#exec">KUSA Board</a></li>
 							<li><a href="#events">Events</a></li>
 							<li><a href="#photos">Photos</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li><a href="#contact">Contact Us</a></li>
 						</ul>
 					</div>
 				</div>
