--- a/templates/events.html
+++ b/templates/events.html
@@ -12,15 +12,17 @@
 							<img src="{{ STATIC_URL }}images/events/career.jpg" >
 		    			</td>
 		    			<td class="event-desc">
-		    				<h2><strong>Career Workshop</strong></h2>
+		    				<h2><strong>Freshman Welcome Party!</strong></h2>
 		    				<h4>April 11, 2015, 11 AM at Keohane Atrium</h4>
 		    				<p>
-		    					Interested in pursuing graduate, medical, law, or pharmacy school? Want FREE Korean food catered from Mixed AND raffle tickets? Then come to KSEA & KUSA's Career Workshop on April 11th! Meet and network with professionals and upperclassmen for career advice!<br><br>
-								Check out our <a href="https://www.facebook.com/events/437941396364284/"> Facebook event page</a> to view the full schedule and the panel members!
+		    					The freshmen welcome party for incoming Vandy students in Korea is almost here! It's a chance for Sunbae's of Vandy's Korean community to meet their Class of 2020 Hoobae's and vice versa. 
+								All Vanderbilt students in Korea, current and incoming, are invited for some good Samgyupsal and a social night of turnin up. <br><br>
+								Check out our <a href="https://www.facebook.com/events/1649874062003162/"> Facebook event page</a> for more information on location and hours!
 		    				</p>
 		    			</td>
 					</tr>
 		    		<tr>
+		    			<!--
 		    			<td class="event-image">
 							<img src="{{ STATIC_URL }}images/events/KoreaNightPoster.jpg" >
 		    			</td>
@@ -155,15 +157,18 @@
 		    			</td>
 		    		</tr>
 		    	</table>
+		    -->
 				<!-- Pagination -->
 		    	<ul class="pagination" id="event-pagination">
 				  	<!-- <li class="disabled" id="prev-photo-page">  <a href="#">&laquo;</a> </li> -->
 				  	<li class="active" id="event-page-1"> 	 	<a href="#">1 </a>		</li>
+				  	<!--
+
 				  	<li id="event-page-2">					 	<a href="#">2 </a>		</li>
 				  	<li id="event-page-3">					 	<a href="#">3 </a>		</li>
 				  	<li id="event-page-4">					 	<a href="#">4 </a>		</li>
 				  	<li id="event-page-5">					 	<a href="#">5 </a>		</li>
-					<!-- <li id="next-photo-page">					<a href="#">&raquo;</a> </li> -->
+					<li id="next-photo-page">					<a href="#">&raquo;</a> </li> -->
 				</ul>
 			</div>
 		</div>
