--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Duke KUSA</title>
+		<title>Vanderbilt KUSA</title>
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/home_style.css" />
 	</head>
 	<body>
