--- a/templates/exec.html
+++ b/templates/exec.html
@@ -3,14 +3,14 @@
 	<div class="section-container">
 		<div class="narrower-container">
 			<div class="section-title">
-		    	<h1> Exec Board </h1>
+		    	<h1> Board Members </h1>
 		    </div>
 		    <!-- Nav tabs -->
 		    <div class="section-content">
 				<ul class="nav nav-tabs" id="exec-tab" role="tablist">
 					<!--President First-->
 					{% for position, members in execs.iteritems %}
-						{% if position == 'Co-Presidents' %}
+						{% if position == 'President' %}
 							<li class="active"><a href="#{{position}}" role="tab" data-toggle="tab"><h5>{{position}}</h5></a></li>	
 						{% endif %}
 					{% endfor %}
@@ -22,7 +22,7 @@
 					{% endfor %}
 					<!--Then the rest-->
 					{% for position, members in execs.iteritems %}
-						{% if position != 'Co-Presidents' and position != 'Vice-President'%}
+						{% if position != 'President' and position != 'Vice-President'%}
 							{% if position != 'Treasurer' and position != 'Webmaster' and position != 'Freshmen-Reps'%}
 								<li><a href="#{{position}}" role="tab" data-toggle="tab"><h5>{{position}}</h5></a></li>
 							{% endif %}
@@ -43,7 +43,7 @@
 				<!-- Tab panes -->
 				<div class="tab-content" id="exec-content">
 				{% for position, members in execs.iteritems %}
-					{% if position == 'Co-Presidents' %}
+					{% if position == 'President' %}
 						<div class="tab-pane fade in active" id="{{position}}">
 					{% else %}
 						<div class="tab-pane fade" id="{{position}}">
