--- a/templates/exec.html
+++ b/templates/exec.html
@@ -9,17 +9,25 @@
 		    <div class="section-content">
 				<ul class="nav nav-tabs" id="exec-tab" role="tablist">
 					<!--President First-->
-
-							<li class="active"><a href="#{{position}}" role="tab" data-toggle="tab"><h5>{{position}}</h5></a></li>	
-
+					{% for position, members in execs.iteritems %}
+						{% if position == 'President' %}
+							<li class="active"><a href="#President" role="tab" data-toggle="tab"><h5>President</h5></a></li>	
+						{% endif %}
+					{% endfor %}
 					<!--Then Vice President-->
-
+					{% for position, members in execs.iteritems %}
+						{% if position == 'Vice-President' %}
 							<li><a href="#{{position}}" role="tab" data-toggle="tab"><h5>{{position}}</h5></a></li>	
-
+						{% endif %}
+					{% endfor %}
 					<!--Then the rest-->
-
+					{% for position, members in execs.iteritems %}
+						{% if position != 'President' and position != 'Vice-President'%}
+							{% if position != 'Treasurer' and position != 'Webmaster' and position != 'Freshmen-Reps'%}
 								<li><a href="#{{position}}" role="tab" data-toggle="tab"><h5>{{position}}</h5></a></li>
-
+							{% endif %}
+						{% endif %}
+					{% endfor %}
 					{% for position, members in execs.iteritems %}
 						{% if position == 'Treasurer' or position == 'Webmaster'%}
 							<li><a href="#{{position}}" role="tab" data-toggle="tab"><h5>{{position}}</h5></a></li>
