--- a/templates/exec.html
+++ b/templates/exec.html
@@ -6,14 +6,17 @@
 		    	<h1> Board Members </h1>
 		    </div>
 		    <!-- Nav tabs -->
+
 		    <div class="section-content">
 				<ul class="nav nav-tabs" id="exec-tab" role="tablist">
 					<!--President First-->
-					
-							<li class="active"><a href="#President" role="tab" data-toggle="tab"><h5>President</h5></a></li>	
-				
+					{% for position, members in exec.iteritems %}
+						{% if position == 'President' %}
+							<li class="active"><a href="#{{position}}" role="tab" data-toggle="tab"><h5>{{position}}</h5></a></li>	
+						{% endif %}''
+					{% endfor %}
 					<!--Then Vice President-->
-					{% for position, members in execs.iteritems %}
+					{% for position, members in exec.iteritems %}
 						{% if position == 'Vice-President' %}
 							<li><a href="#{{position}}" role="tab" data-toggle="tab"><h5>{{position}}</h5></a></li>	
 						{% endif %}
@@ -40,7 +43,7 @@
 
 				<!-- Tab panes -->
 				<div class="tab-content" id="exec-content">
-				{% for position, members in execs.iteritems %}
+				{% for position, members in exec.iteritems %}
 					{% if position == 'President' %}
 						<div class="tab-pane fade in active" id="{{position}}">
 					{% else %}
